fix order of border rendering; remove z-index from selection borders (#1640)

--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -251,11 +251,6 @@
 .handsontable .wtBorder.hidden{
   display:none !important;
 }
-.handsontable .wtBorder.current,
-.handsontable .wtBorder.area,
-.handsontable .wtBorder.fill {
-  z-index: 100;
-}
 
 .handsontable td.area {
   background-color: #EEF4FF;
